# jdns

./: Cargo.toml  LICENSE  README.md  flake.nix  todo
crates/dns/: README.md  authority.rs  context.rs  mod.rs  packet.rs
crates/parsedns/: Cargo.toml
crates/parsedns/src/: error.rs  header.rs  indexed_input.rs  lib.rs  question.rs  traits.rs  utils.rs
crates/parsedns/src/rr/: class.rs  data.rs  mod.rs  name.rs  record.rs  types.rs
crates/parsedns/src/rr/rdata/: a.rs  mod.rs  soa.rs
crates/server/: main.rs
crates/udp/: mod.rs
src/: main.rs
src/udp/: send.rs  server.rs
