[package]
name = "jdns"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.17.0", features = [ "full" ] }
socket2 = "0.4.4"
dashmap = "5.2.0"
futures = "0.3.21"
num_cpus = "1.13.1"
dns-message-parser = "0.6.0"
bytes = "1.1.0"
