[package]
name = "jdns"
version = "0.1.0"
edition = "2021"

[lib]
name = "parsedns"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
bitvec = "1.0.0"
nom = "7.1.1"
tinyvec = { version = "1.5.1", features = [ "alloc" ] }
